= Next Release: 3.9

 - Fix use of poll(2) to avoid possible busy-loop on Linux

= Release History

== 3.8: August 11, 2017

 - Run the utility if the spacebar is pressed
 - 'q' for quit

== 3.7: February 27, 2017

 - Terminate subprocess in restart mode if a file under watch disappears
 - Allow NOTE_ATTRIB to set '/_' only if file mode changes
 - New '-s' option executes commands using $SHELL -c
 - Print usage and exit if input is from a terminal instead of a pipe

== 3.6: July 01, 2016

 - Do not print warning if _TTY_PATH cannot be opened (for chroot, docker, ...)
 - Non-existent input files produce a warning instead of an error

== 3.5: April 01, 2016

 - Removed contrib/*
 - Detect new subdirectories on Linux
 - Direct users to http://entrproject.org/limits.html if inotify hits a kernel
   limit

== 3.4: December 12, 2015

 - Terminate the child process before exiting when the reload option is combined
   with the directory watch option
 - Direct users to http://entrproject.org/limits.html if the maximum number of
   open files is exceeded

== 3.3: October 23, 2015

 - Substitute '/_' only with regular files when using the directory watch option
 - Bugfix when tracking the first file to change
 - Display release number along with usage


== 3.2: April 9, 2015

 - Execute the utility immediately after registering watch events. Old behavior
   is restored using new postpone option ('-p')
 - Relocated 'reload-browser' to http://entrproject.org/scripts/reload-browser
 - Drop FIFO support to further simply code and documentation. FIFO mode was
   conceptually good, but EXEC mode is intelligent hand easily handles the vast
   majority of use cases.
 - Remove kFreeBSD as a target platform

== 3.1: March 4, 2015

 - Return error code indicating exit reason after handling signals
 - Restart mode sets process group to ensure that wrapper scripts do not prevent
   signals from reaching child processes
 - Removed DEBUG printf statements

== 3.0: December 19, 2014
