@@ -1,6 +1,7 @@
 = Next Release: 3.9
 
  - Fix use of poll(2) to avoid possible busy-loop on Linux
+ - Disable keyboard input if reading STDIN fails
 
 = Release History
 
